styles/responsive-styles.css
/*Responsive nav bar STARTS HERE*/

@media (max-width: 1080px) {
  * {
    list-style: none;
  }
  .right-nav {
    display: none;
  }

  .left-nav {
    flex: 0.5;
    justify-content: flex-start;
    align-items: center;
  }

  .hamburger-menu {
    display: flex;
    justify-content: flex-end;
    flex: 0.5;
  }

  .hamburger-menu-inactive {
    opacity: 0;
  }

  .blur-on {
    filter: blur(0.2rem);
    transition: all 0.3s ease;
  }

  .blur-off {
    filter: blur(0);
    transition: all 0.3s ease;
  }

  .ham-links {
    position: fixed;
    display: flex;
    z-index: 1000;
    inset: 0;
    box-shadow: 0 0 10px rgba(50, 50, 50, 1);
    background-color: #222;
    align-items: center;
    justify-content: center;
    transform: translateX(110%);
    transition: all 0.3s ease-in-out;
  }

  .ham-links-active {
    transform: translateX(0);
  }

  .ham-links div {
    display: flex;
    height: 50%;
    width: 100%;
    justify-content: center;
    align-items: center;
  }

  .ham-links div ul {
    display: flex;
    max-height: max-content;
    width: 100%;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    margin: 1rem;
    outline: 1px solid red;
  }

  .ham-links div ul li {
    font-size: clamp(1px, 5vw, 3rem);
    width: 100%;
    height: max-content;
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .ham-links div ul li svg {
    fill: orange;
    height: 100%;
    width: auto;
  }

  ul li a:link,
  ul li a:visited {
    color: white;
  }

  ul li a:active {
    color: brown;
  }

  ul li a:active:hover {
    background-color: none;
  }

  .close-button {
    position: fixed;
    z-index: inherit;
    top: 10%;
    right: 6%;
  }

  .social-links-responsive {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: fixed;
    z-index: inherit;
    right: 2%;
    top: 50%;
    gap: 0.4rem;
    width: 5%;
  }
  #git-hub svg,
  #instagram svg {
    opacity: 1;
  }
}

